eos-deployment-manifests/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eos-gateway-api
  labels:
    app: eos-gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eos-gateway-api
  template:
    metadata:
      labels:
        app: eos-gateway-api
    spec:
      containers:
      - name: eos-gateway-api
        image: 339713094217.dkr.ecr.us-east-1.amazonaws.com/gateway:2.0
        ports:
        - containerPort: 5555
