eos-deployment-manifests/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos-gateway-api
spec:
  rules:
  - host: dev-gateway.edshopper.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eos-gateway-api-service
            port:
              number: 5555
  ingressClassName: nginx
